$Id$

2019-07-01  Christian Franke  <franke@computer.org>

	os_win32/vc14/smart*.vcxproj*: Add missing scsinvme.cpp.

2019-06-28  Christian Franke  <franke@computer.org>

	smartd.cpp: Reset scheduled_test_next_check time if system clock
	has been adjusted to the past.
	Use LOG_INFO instead of LOG_CRIT for related message.

	examplescripts/Example6: Update from Fedora package 7.0-5.fc31.

	examplescripts/Example[78]: New scripts using /usr/sbin/sendmail
	to send email (Ubuntu Bug 1833331).
	Makefile.am, examplescripts/README: Add new scripts.

2019-06-19  Christian Franke  <franke@computer.org>

	os_win32.cpp: Decode Windows 10 1903 and Server 1903 build number.
	Allow drive letters as device names for Windows 10 NVMe driver.
	Check for unsupported nonzero NVMe CDW11..15.

	smartctl.8.in: Fix typo introduced 15 years ago in r1789.

	drivedb.h:
	- Unify some 'Host_Reads/Writes_*' attribute names
	- JMicron based SSDs: Transcend SSD340K, SSD740
	- Samsung based SSDs: PM863a Dell OEM (#1200)
	- Toshiba MG06ACA... Enterprise Capacity HDD (#1023, #1099)
	- Toshiba MG07ACA... Enterprise Capacity HDD (#1023, #1175)
	- WD Blue and Green SSDs: Variants without trailing -* (#1198)
	- USB: JMicron JMS583 [NVMe] (0x152d:0x0583): Remove '#please_try'
	- USB: Transcend (0x8564:0x7000) (GH issues/32)

2019-06-17  Christian Franke  <franke@computer.org>

	os_win32.cpp: Clear ProtocolDataRequestSubValue for NVMe Get Log Page
	commands because newer drivers pass this value as CDW12 (LPOL) to the
	drive.  This fixes log page access for NVMe 1.2.1+ drives (#1201).

	Thanks to Vikram Manja for bug report and testing.

2019-06-12  Christian Franke  <franke@computer.org>

	os_netbsd.cpp: Fix device scan crash on empty name list.
	Fix a memory leak introduced 15 years ago in r1434.

	Thanks to Alexander Nasonov for bug report and testing.

2019-05-21  Christian Franke  <franke@computer.org>

	smartd.conf.5.in: Update list of directives which affect '-m'.