@@ -292,6 +292,7 @@
     <ClInclude Include="..\..\json.h" />
     <ClInclude Include="..\..\nvmecmds.h" />
     <ClInclude Include="..\..\nvmeprint.h" />
+    <ClInclude Include="..\..\static_assert.h" />
     <ClInclude Include="..\popen.h" />
     <ClInclude Include="config.h" />
     <ClInclude Include="svnversion.h" />
