@@ -110,6 +110,7 @@
     <ClInclude Include="..\..\nvmeprint.h" />
     <ClInclude Include="..\..\dev_intelliprop.h" />
     <ClInclude Include="..\..\json.h" />
+    <ClInclude Include="..\..\static_assert.h" />
     <ClInclude Include="..\..\getopt\getopt_int.h">
       <Filter>getopt</Filter>
     </ClInclude>
